--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,15 +1,36 @@
 .aboutMain {
-    background-color: rgb(0, 64, 41);
+  background-color: #004029;
 }
 
 .aboutText {
-    font-size: 32px;
-    font-family:'Libre Baskerville', serif;
-    color: hsla(0, 0%, 85%, 0.600);
-
+  font-size: 32px;
+  font-family: "Libre Baskerville", serif;
+  color: hsla(0, 0%, 85%, 0.6);
 }
 
 .aboutUnderline {
-    text-decoration: underline;
-    color: white;
+  text-decoration: underline;
+  color: white;
+}
+
+.mainHours {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.mainHours h2 {
+  font-size: 32px;
+}
+
+.mainHours p {
+  font-size: 24px;
+}
+
+.hours {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
