--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,15 +1,14 @@
 .aboutMain {
-    background-color: rgb(0, 64, 41);
+  background-color: rgb(0, 64, 41);
 }
 
 .aboutText {
-    font-size: 32px;
-    font-family:'Libre Baskerville', serif;
-    color: hsla(0, 0%, 85%, 0.600);
-
+  font-size: 32px;
+  font-family: "Libre Baskerville", serif;
+  color: hsla(0, 0%, 85%, 0.6);
 }
 
 .aboutUnderline {
-    text-decoration: underline;
-    color: white;
+  text-decoration: underline;
+  color: rgb(255, 255, 255);
 }
