--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -17,8 +17,7 @@
   position: fixed;
   z-index: 1;
   width: 100%;
-  background-color: rgb(255, 255, 255);
-  opacity: 90%;
+  background-color: white;
 }
 
 .links {
@@ -36,7 +35,6 @@
 }
 
 .order {
-  padding: ;
   background-color: rgb(0, 64, 41);
   font-size: 16px;
   color: white;
