--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -17,7 +17,11 @@
   position: fixed;
   z-index: 1;
   width: 100%;
-  background-color: white;
+  background: #ffffff;
+}
+
+.root .active {
+  background: #ffffff;
 }
 
 .links {
@@ -46,7 +50,7 @@
 .dot {
   height: 3px;
   width: 3px;
-  background-color: rgb(0, 0, 0);
+  background-color: black;
   border-radius: 50%;
   display: inline-block;
 }
