--- a/styles/menu.module.css
+++ b/styles/menu.module.css
@@ -1,4 +1,68 @@
+/* Main Menu Stuff */
+.menu {
+  font-family: "Libre Baskerville", serif;
+  background: #f7f6ef;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.menu h2 {
+  font-size: 32px;
+}
+
+.menu p {
+  font-size: 24px;
+  padding: 20px 0px;
+}
+
+.menu h3 {
+  font-size: 24px;
+}
+
+.menuHolder {
+  width: 90%;
+}
+
+/* Heading Lines */
+.rectangle {
+  width: 128px;
+  height: 1px;
+  background: #000000;
+  margin-bottom: 10px;
+}
+
+/* Menu Page Heading */
 .menuHeading {
-  padding-top: 100px;
+  padding: 128px 0px;
   text-align: center;
+  font-size: 64px;
+}
+
+.subHeading {
+  padding-bottom: 64px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Menu Divider Settings */
+.menuDivider {
+  width: 50%;
+}
+/* Item Holder Settings*/
+
+.itemHolder {
+  background: #ffffff;
+  display: flex;
+  border-radius: 8px;
+  padding: 64px;
+}
+
+/* Every Menu Item Settings */
+.menuItem {
+  padding-bottom: 32px;
 }
