made a few sections responsive on higher resolution displays

--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -9,6 +9,7 @@
 
 .aboutText {
   width: 80%;
+  max-width: 1440px;
   font-size: 32px;
   font-family: "Libre Baskerville", serif;
   color: hsla(0, 0%, 85%, 0.6);
