--- a/styles/hours.module.css
+++ b/styles/hours.module.css
@@ -35,13 +35,20 @@
 
 .hoursMid {
   display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+@media screen and (min-width: 50rem) {
+  .hoursMid {
+    flex-direction: row;
+  }
 }
 
 .hoursMid {
   display: flex;
-  padding: 32px 0px;
-  width: 80%;
-  max-width: 1440px;
+  padding: 32px 5vw;
+  max-width: 80rem;
   justify-content: space-around;
 }
 
@@ -53,78 +60,9 @@
   padding: 32px 64px;
   justify-content: center;
   align-items: center;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
 }
 
 .hoursInfo h2 {
   padding-bottom: 10px;
-}
-
-/* Order Button */
-
-.order {
-  background-color: rgb(0, 64, 41);
-  font-size: 24px;
-  color: white;
-  font-family: Montserrat;
-  border-radius: 4px;
-  padding: 16px 32px;
-  border: none;
-}
-
-.order {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-family: Montserrat;
-  padding: 16px 32px;
-  text-align: center;
-  background: #004029;
-  font-size: 24px;
-  border-radius: 8px;
-  color: white;
-  cursor: pointer;
-  overflow: hidden;
-  z-index: 1;
-}
-
-.order:hover {
-  color: #ffffff;
-}
-
-.orderCon {
-  display: grid;
-  place-items: center;
-  position: relative;
-  padding: 4px;
-  border-radius: 8px;
-  background: linear-gradient(50deg, #004029, #004029);
-  overflow: hidden;
-}
-
-.orderCon::before {
-  content: " ";
-  position: absolute;
-  width: 450px;
-  height: 35px;
-  top: 0;
-  right: 35px;
-  transition: 1.9s;
-  background: linear-gradient(50deg, #ffffff, #ffffff);
-  transform: rotate(-45deg) translate(0, -100px);
-}
-
-.orderCon:hover::before {
-  animation: cardEffect 2.2s;
-}
-
-@keyframes cardEffect {
-  100% {
-    transform: rotate(-45deg) translate(0, 450px);
-  }
-}
-
-.orderBtn {
-  color: #ffffff;
-  text-decoration: none;
 }
