--- a/styles/homeMenu.module.css
+++ b/styles/homeMenu.module.css
@@ -1,13 +1,20 @@
 .homeMenuMain {
+  background-color: #f7f6ef;
+}
+
+.homeitem {
+}
+
+.container {
+  max-width: 80rem;
+  width: 100%;
+  margin: 0 auto;
+  gap: 2rem;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  background-color: #f7f6ef;
-}
-
-.homeMenuItem {
-  padding: 20px 25px;
+  padding-bottom: 8rem;
 }
 
 .homeMenuImage {
