--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -4,6 +4,7 @@
   background-color: rgb(0, 64, 41);
   align-items: center;
   padding: 100px 0px;
+  background-size: cover;
   background-image: url("../public/background_image.png");
 }
 
