--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -4,24 +4,30 @@
   align-items: center;
 }
 
+.overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  backdrop-filter: blur(8px);
+  z-index: 10;
+}
+
 .container {
+  align-items: center;
   display: flex;
   justify-content: space-between;
   width: 100%;
   margin: 0 auto;
   max-width: 1280px;
+  padding: 0.25rem 5vw;
 }
 
 .root {
   display: flex;
-  position: fixed;
-  z-index: 10;
   width: 100%;
-  background: #ffffff;
-}
-
-.root .active {
-  background: #ffffff;
+  position: fixed;
+  z-index: 100;
 }
 
 .links {
@@ -32,15 +38,28 @@
   padding: 0px 10px;
   font-size: 16px;
   align-items: center;
+  flex-direction: column;
+  z-index: 11;
+
+  align-items: flex-start;
+  position: fixed;
+  background-color: #101010;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 1rem;
 }
 
 .links li {
-  padding: 8px 16px;
+  width: 100%;
 }
 
 .links a {
   text-decoration: none;
+  padding: 8px 0;
   color: black;
+  width: 100%;
+  display: inline-flex;
 }
 
 .links a:hover {
@@ -48,11 +67,11 @@
 }
 
 .dot {
+  display: none;
   height: 3px;
   width: 3px;
   background-color: black;
   border-radius: 50%;
-  display: inline-block;
 }
 
 .links .order {
@@ -62,6 +81,14 @@
   border-radius: 4px;
   padding: 8px 16px;
   border: none;
+}
+
+.links {
+  justify-content: flex-start;
+  align-items: flex-start;
+  height: 100vh;
+  width: 80%;
+  right: 0;
 }
 
 .order {
@@ -109,8 +136,74 @@
   animation: cardEffect 1.9s;
 }
 
+.orderCon a {
+  white-space: nowrap;
+}
+
+.menuButton,
+.closeButton {
+  border: none;
+  background: none;
+  display: inline-flex;
+}
+
+.menuButton svg,
+.closeButton svg {
+  border: none;
+  background: none;
+  height: 1.25rem;
+  width: 1.25rem;
+}
+
+.menuButton.notHome svg {
+  color: #000 !important;
+}
+
+button.closeButton > svg {
+  color: #fff !important;
+}
+
 @keyframes cardEffect {
   100% {
     transform: rotate(-45deg) translate(0, 450px);
+  }
+}
+
+@media screen and (min-width: 50rem) {
+  .dot {
+    display: inline-block;
+  }
+  .links {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: relative;
+    width: auto;
+    background-color: transparent;
+    bottom: inherit;
+    top: inherit;
+    height: auto;
+  }
+  .links li {
+    width: auto;
+  }
+  .links a {
+    padding: 8px 16px;
+  }
+  .links.notHome > li:not(:last-of-type) > a {
+    color: black !important;
+  }
+  .links.notHome > span {
+    background: black !important;
+  }
+  .menu {
+    align-items: center;
+    display: inline-flex;
+  }
+  .menuButton {
+    display: none;
+  }
+  .closeButton {
+    display: none;
   }
 }
