--- a/styles/homeMenu.module.css
+++ b/styles/homeMenu.module.css
@@ -3,6 +3,7 @@
 }
 
 .homeitem {
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
 }
 
 .container {
@@ -17,7 +18,12 @@
   padding-bottom: 8rem;
 }
 
-.homeMenuImage {
+.container a {
+  text-decoration: none;
+}
+
+.homeMenuImage img {
+  border-radius: 0.5rem 0.5rem 0rem 0rem;
 }
 
 .homeMenuDesc {
@@ -29,4 +35,5 @@
   display: flex;
   align-items: center;
   padding-left: 20px;
+  border-radius: 0rem 0rem 0.5rem 0.5rem;
 }
